# AI-Auto-Attack

./: .env.example  .gitignore  README.md  pyproject.toml  settings.yaml
agents/: __init__.py  decision_engine.py  model_router.py  multi_stage_workflow.py  target_profiler.py  workflow_graph.py
backend/: __init__.py  main.py
connectors/: README.md  __init__.py  base.py  defectdojo_connector.py  models.py  nmap_connector.py  nuclei_connector.py  scan_orchestrator.py  zap_connector.py
docs/: acceptance_report_template.md  architecture.md  cost_control.md  demo_playbook.md  error_taxonomy.md  evidence_schema.md  integration_defectdojo.md  kpi_definition.md  release_checklist.md  retry_and_compensation.md  secrets_policy.md  security_governance.md
infra/: __init__.py  release_manifest.yaml  release_validator.py
policies/: action_policy.yaml  scope_policy.yaml
tests/: __init__.py  test_audit_api.py  test_audit_service.py  test_connectors.py  test_decision_engine.py  test_defectdojo_connector.py  test_diff_generator.py  test_health.py  test_kpi_jobs.py  test_metrics_api.py  test_metrics_service.py  test_model_router.py  test_multi_stage_api.py  test_path_graph.py  test_redaction.py  test_regression_runner.py  test_release_validator.py  test_report_generator.py  test_resource_quota.py  test_retention_service.py  test_secret_manager.py  test_security_api.py  test_security_guards.py  test_state_store.py  test_target_profiler.py  test_tasks_api.py  test_temporal_api.py  test_workflow_api.py  test_workflow_graph.py
workflows/: multi_stage.yaml  poc_single_target.yaml  (+3 more)
(+42 files in other folders)
