[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-attack"
version = "0.1.0"
description = "Enterprise AI-assisted automated security testing scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "PyYAML>=6.0.0,<7.0.0",
  "langgraph>=0.2.0,<1.0.0",
  "litellm>=1.60.0,<2.0.0",
  "temporalio>=1.7.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "httpx>=0.27.0,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["backend*", "agents*", "connectors*", "reports*", "infra*"]
